# agent-voting-evaluation

./: .cruft.json  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REPRODUCE.md  mkdocs.yml  pyproject.toml  requirements.txt
.code_quality/: ruff.toml
configs/: experiment_config.yaml
configs/agents/: agent_anthropic.yaml  agent_google.yaml  agent_openai.yaml
configs/prompts/: geval_relevance_prompt.txt  pilot_results_v1.json  pilot_results_v2.json  pilot_results_v3.json  pilot_sample.json  select_pilot_sample.py  v1_generic.txt  v2_dialogue_cot.txt
docs/: agent_panel_design.md  dataset_selection.md  limitations.md  prompt_iterations.md  significance_tests_justification.md  voting_scheme_analysis.md
notebooks/: 01_eda.ipynb  02_prompt_pilot.ipynb  03_voting_pilot.ipynb  04_descriptive_analysis.ipynb  05_correlation_analysis.ipynb  06_significance_tests.ipynb  07_error_analysis.ipynb  08_cost_analysis.ipynb  README.md
outputs/: correlation_analysis_summary.md  cost_analysis_summary.md  descriptive_analysis_summary.md  error_analysis_summary.md  geval_analysis_report.md  significance_tests_summary.md  voting_pilot_results.json  voting_results.json  voting_summary_stats.md
outputs/agent_scores/: full_agent_anthropic.json  full_agent_google.json  full_agent_openai.json  pilot_agent_anthropic.json  pilot_agent_google.json  (+1 more)
scripts/: __init__.py  analyze_geval.py  build_pilot_notebook.py  download_dataset.py  run_geval.py  run_judge.py  run_voting_system.py  test_deepeval_setup.py  transform_dataset.py
tests/: test_aggregator.py  test_download_dataset.py  test_imports.py  test_run_geval.py  test_transform.py
(+2 files in other folders)
