[project]
name = "agent-voting-evaluation"
version = "0.1.0"
description = "Sistema de evaluación de agentes LLM mediante vun sistema de votación"
authors = [
    "Laura Granda <https://github.com/LauraGranda>",
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "anthropic>=0.89.0",
    "deepeval>=3.9.5",
    "matplotlib>=3.10.8",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.28.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[project.urls]
documentation = "https://.github.io/agent-voting-evaluation"
repository = "https://github.com//agent-voting-evaluation"


[dependency-groups]
dev = [
    "pre-commit>=4.5.1", # Code linting and formatting
    "pytest>=9.0.2", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=7.1.0",
    "cruft[pyproject]>=2.16.0",# Automated Cookiecutter template synchronization
    "types-requests>=2.28.0", # Type stubs for requests library
    "jupyter>=1.1.0", # Jupyter notebook environment
    "nbconvert>=7.16.0", # Notebook execution and conversion
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.19",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
